# nix-for-humanity

./: .dockerignore  .gitignore  BRIDGING_VISION_AND_REALITY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_REORGANIZATION_COMPLETE.md  DOCUMENTATION_STATUS_REPORT_2025-07-25.md  Dockerfile  Dockerfile.dev  Dockerfile.tauri  GITHUB_PUSH_CHECKLIST.md  MVP_ACTION_PLAN.md  Makefile  README.md  backend-primary  dev-tauri.sh  docker-compose.yml  flake.nix  frontend-primary  index.html  jest.config.js  nginx.conf  nixos-module.nix  package.json  requirements.txt  shell-complete.nix  shell-minimal.nix  shell-rust.nix  shell.nix  supervisord.conf  tauri.conf.template.json  test-safe-execution.js  tsconfig.json  vite.config.js  vite.config.ts
.claude/: ACCESSIBILITY_REQUIREMENTS.md  CLAUDE_PROJECT_CONTEXT.md  CLOUD_AI_CONSIDERATIONS.md  CLOUD_AI_STRATEGY.md  CONTEXT.md  DEVELOPMENT_PHILOSOPHY.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_PRIORITIES.md  LAYERED_REALITY_POLICY.md  MEMORY_UPDATE_2025_07_23.md  NATURAL_LANGUAGE_FIRST_CLARIFICATION.md  NATURAL_LANGUAGE_FIRST_PRINCIPLE.md  NIXOS_INTEGRATION_PATTERNS.md  NLP_INTENT_PATTERNS.md  OPERATIONAL_INTELLIGENCE.md  PROJECT_CONTEXT.md  PROJECT_STATUS.md  README.md  SERVICE_PORTS_REGISTRY.md  TAURI_IMPLEMENTATION_APPROACH.md  TECHNICAL_DECISIONS.md  TECH_STACK_DECISION.md  TEXT_FOUNDATION_UPDATE_SUMMARY.md  VISION_ALIGNMENT.md  VISUAL_ELEMENTS_PHILOSOPHY.md
.github/: cliff.toml  (+2 more)
archive/2025-01-cleanup/src-tauri/: Cargo.toml  tauri.conf.json
archive/2025-01-cleanup/src-tauri/src/: commands.rs  main.rs  nix.rs  nlp.rs  security.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+570 files in other folders)
