[package]
name = "nix-for-humanity"
version = "0.1.0"
description = "Natural language interface for NixOS"
authors = ["Tristan Stoltz"]
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "nix-for-humanity"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true