[package]
name = "nix-for-humanity"
version = "0.1.0"
description = "Natural language interface for NixOS"
authors = ["Luminous-Dynamics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Luminous-Dynamics/nix-for-humanity"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Security and sandboxing
nix = "0.27"
caps = "0.5"

# Natural language command building
nom = "7.1"  # Parser combinators for AST building

[features]
# This feature is used for production builds or when running `tauri build`
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]